--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-html5-camera-photo": "^1.5.2",
     "react-scripts": "3.2.0",
     "react-spinners": "^0.6.1",
-    "react-youtube": "^7.9.0"
+    "react-youtube": "^7.9.0",
+    "react-youtube-playlist": "^2.2.8"
   },
   "scripts": {
     "start": "react-scripts start",
