--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "gh-pages": "^2.1.1",
+    "node-sass": "^4.13.0",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
     "react-html5-camera-photo": "^1.5.2",
+    "react-loading-overlay": "^1.0.1",
     "react-scripts": "3.2.0",
     "react-spinners": "^0.6.1",
     "react-youtube": "^7.9.0",
